--- a/index.html
+++ b/index.html
@@ -256,9 +256,8 @@
                     <div class="project-content">
                         <h2 class="project-title">KFUPM Registration System</h2>
                         <span class="project-category">Software Engineering</span>
-                        <span class="project-date">May 2024</span>
                         <ul class="project-features">
-                            <li>The KFUPM Registration System is a software application developed as part of the SWE-206: Introduction to Software Engineering course project. The system aims to streamline the reservation process and provide a user-friendly interface for efficient management of activities.</li>
+                            <li>A software application developed as part of the SWE-206: Introduction to Software Engineering course project. The system aims to streamline the reservation process and provide a user-friendly interface.</li>
                         </ul>
                         <a href="https://github.com/reyyynad/SWE206-KFUPM-Registration-System-Project" class="link-btn">
                             <button class="project-btn">See GITHUB!</button>
@@ -281,9 +280,8 @@
                     <div class="project-content">
                         <h2 class="project-title">Facelite</h2>
                         <span class="project-category">Object-Oriented Programming</span>
-                        <span class="project-date">December 2023</span>
                         <ul class="project-features">
-                            <li>FaceLite is a social networking application that was developed as part of the ICS-108: Object-Oriented Programming course project.</li>
+                            <li>A social networking application that was developed as part of the ICS-108: Object-Oriented Programming course project.</li>
                         </ul>
                         <a href="https://github.com/reyyynad/ICS108Project">
                             <button class="project-btn">See GITHUB!</button>
@@ -306,7 +304,7 @@
                     <div class="project-content">
                         <h2 class="project-title">Portfolio Website</h2>
                         <span class="project-category">Web Development</span>
-                        <span class="project-date">November 2024</span>
+   
                         <ul class="project-features">
                             <li>A modern, responsive portfolio website built with HTML, CSS, and JavaScript featuring API integration and advanced state management.</li>
                         </ul>
