Added formspree integration to receive messages. Not part of assignment 3 or 4

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         Have an idea, opportunity, or just want to say hi? I'd love to hear from you
                         and explore what we can create together!
                     </p>
-                    <form id="contactForm" action="#" method="post" class="card">
+                    <form id="contactForm" action="https://formspree.io/f/manrbyzb" method="POST" class="card">
                         <div class="form-group">
                           <label for="name">Your name:</label>
                           <input
