--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
     <title>Renad Elsafi Portfolio</title>
   </head>
   <body>
-
-
+    
     <div class="name-modal-overlay" id="nameModalOverlay">
       <div class="name-modal">
           <div class="modal-icon">
               <i class="fas fa-user-circle"></i>
           </div>
           <h2 class="modal-title">Welcome to My Portfolio!</h2>
-          <p class="modal-subtitle">What's your name? 😊</p>
+          <p class="modal-subtitle">I'd love to know who's visiting 😊</p>
           
           <div class="modal-input-group">
               <label for="visitorNameInput">What's your name? (Optional)</label>
