--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     </div>
                 </div>
 
-                <div class="project-card" data-category="web" data-date="2024-11" data-name="Portfolio Website">
+                <div class="project-card" data-category="web" data-date="2025-11" data-name="Portfolio Website">
                     <div class="project-visual">
                         <div class="project-icon teal">
                             <img src="assets/images/bulb.png" alt="Project icon" class="project-image">
@@ -350,7 +350,7 @@
                 </div>
 
 
-                <!-- <div class="project-card" data-category="mobile_app" data-date="2025-12" data-name="Darajati">
+                <div class="project-card" data-category="mobile_app" data-date="2025-12" data-name="Darajati">
                   <div class="project-visual">
                       <div class="project-icon purple">
                           <img src="assets/images/bulb.png" alt="Project icon" class="project-image">
@@ -372,7 +372,7 @@
                       <a href="https://apps.apple.com/us/app/darajati/id6756276875">
                           <button class="project-btn">Download now!</button>
                       </a>
-                  </div> -->
+                  </div>
 
                   
               </div>
